--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,395 @@
-.App {
-  text-align: center;
+:root {
+	--color-black: #111;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1,
+p {
+	margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Toastify .Toastify__toast-container {
+	width: 400px;
+}
+/* CSS Table */
+.table {
+	color: var(--color-black);
+}
+.table td {
+	border: 1px solid #111;
+	text-align: center;
+	vertical-align: middle;
 }
 
-.App-link {
-  color: #61dafb;
+.table thead th {
+	text-align: center;
+	vertical-align: middle;
+	border: 1px solid #111;
 }
 
+.table tbody tr {
+	cursor: pointer;
+}
+
+.table tbody tr:hover {
+	background-color: rgba(0, 0, 0, 0.05);
+}
+
+/* END CSS Table */
+.form-control:focus {
+	border: 1px solid #56cc9d;
+	box-shadow: none;
+}
+
+.icon-btn {
+	width: 150px;
+	margin-right: 4px;
+}
+.landing {
+	position: relative;
+	background: url('./assets/img/landing.jpg') no-repeat center center/cover;
+	height: 100vh;
+}
+.dark-overlay {
+	background-color: rgba(0, 0, 0, 0.5);
+	height: 100%;
+}
+
+.landing-inner {
+	height: 100%;
+	margin: auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	color: white;
+}
+
+.landing-inner form {
+	width: 30%;
+	font-size: 1rem;
+}
+
+.landing-inner * {
+	font-size: 1rem;
+}
+
+.landing-inner h1 {
+	font-size: 2.5rem;
+	color: white;
+}
+
+.landing-inner h4 {
+	font-size: 1.5rem;
+	margin-bottom: 16px;
+	color: white;
+}
+.spinner-container {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-moz-transform: translateX(-50%) translateY(-50%);
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-50%);
+}
+.btn-floating {
+	position: fixed;
+	bottom: 40px;
+	right: 40px;
+}
+
+.main {
+	padding: 0 40px;
+	height: calc(100vh - 60px);
+	overflow: auto;
+}
+
+.form-search {
+	width: calc(100vw - 80px);
+	min-width: 1100px;
+}
+.form-search-wrapper {
+	width: 50%;
+	max-width: 50%;
+	padding: 20px;
+}
+
+.label-text {
+	min-width: 130px;
+}
+
+.input-room {
+	width: 260px;
+}
+
+.btn-search-inpatient {
+	margin: 0 20px 8px;
+}
+
+/* Table Inpatients */
+.table-inpatients thead th:nth-child(1) {
+	width: 10%;
+}
+.table-inpatients thead th:nth-child(2) {
+	width: 15%;
+}
+.table-inpatients thead th:nth-child(3) {
+	width: 6%;
+}
+.table-inpatients thead th:nth-child(4) {
+	width: 6%;
+}
+.table-inpatients thead th:nth-child(5) {
+	width: 28%;
+}
+.table-inpatients thead th:nth-child(6) {
+	width: 5%;
+}
+.table-inpatients thead th:nth-child(7) {
+	width: 10%;
+}
+.table-inpatients thead th:nth-child(8) {
+	width: 10%;
+}
+.table-inpatients thead th:nth-child(9) {
+	width: 5%;
+}
+.table-inpatients thead th:nth-child(10) {
+	width: 5%;
+}
+
+/* Inpatient */
+.info-hc {
+	border: 1px solid #ccc;
+	padding: 16px 10px 10px;
+	border-radius: 8px;
+	position: relative;
+}
+
+.descript-form {
+	text-transform: uppercase;
+	font-weight: 600;
+	border: 1px solid #ccc;
+	padding: 2px;
+	background-color: white;
+	border-radius: 2px;
+	position: absolute;
+	top: -16px;
+	left: 12px;
+}
+
+.info-hc-item {
+	display: inline-block;
+	margin: 4px 16px 4px 0;
+}
+
+.info-hc-item__title {
+	padding-right: 8px;
+	width: 100px;
+}
+
+.item__content--name {
+	width: 200px;
+}
+.item__content--year {
+	width: 80px;
+}
+.item__content--gender {
+	width: 60px;
+}
+.item__content--address {
+	width: 575px;
+}
+.item__content--type {
+	width: 100px;
+}
+.item__content--mathe {
+	width: 180px;
+}
+.item__content--bed {
+	width: 60px;
+}
+.item__content--room {
+	width: 250px;
+}
+.item__content--department {
+	width: 208px;
+}
+.item__content--banumber {
+	width: 160px;
+}
+.item__content--cd {
+	width: 660px;
+}
+.item__content--doctor {
+	width: 208px;
+}
+
+/* Care */
+.form-wrapper {
+	max-width: 100%;
+	display: flex;
+}
+
+.form-group-item {
+	display: flex;
+	min-width: 500px;
+	margin-right: 20px;
+}
+
+.form-group__commands,
+.form-group__happen {
+	flex-direction: column;
+}
+.control-wrapper {
+	position: relative;
+}
+
+.search-result {
+	position: absolute;
+	top: 40px;
+	right: 0;
+	max-height: 200px;
+	min-height: 40px;
+	overflow-y: scroll;
+	width: 100%;
+	z-index: 10;
+	background-color: white;
+	border: 1px solid #ccc;
+	border-radius: 8px;
+}
+
+.search-result-item {
+	cursor: pointer;
+	margin-bottom: 0;
+	padding: 8px;
+}
+
+.search-result-item:hover {
+	background-color: rgba(0, 0, 0, 0.1);
+}
+.form-group__happen-input {
+	min-height: 200px;
+	max-height: 240px;
+}
+
+.commands {
+	z-index: 9;
+	border: 1px solid #ccc;
+	border-radius: 8px;
+	height: 200px;
+	margin-top: 4px;
+}
+
+.command-wrap {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 0 8px;
+	cursor: pointer;
+	border-radius: 8px;
+}
+
+.command-wrap:hover {
+	background-color: rgba(0, 0, 0, 0.1);
+}
+
+.icon-delete {
+	font-size: 24px;
+	border-radius: 50%;
+	width: 36px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.icon-delete:hover {
+	background-color: rgba(0, 0, 0, 0.15);
+}
+
+/* Print */
+.print-container {
+	padding: 80px;
+	color: black;
+	font-size: 18px;
+}
+.print-header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 80px;
+}
+
+.header-logo-wrapper {
+	display: flex;
+	align-items: center;
+}
+.print-header-item {
+	text-align: center;
+}
+
+.header-info-hospital {
+	font-weight: 600;
+	color: #000080;
+	font-size: 20px;
+	text-align: left;
+}
+.header-title {
+	font-size: 32px;
+	font-weight: 700;
+	color: #000080;
+}
+
+.print-info {
+	font-size: 18px;
+	padding: 0 20px;
+}
+
+.info-row {
+	display: flex;
+	align-items: center;
+	padding: 4px 0;
+}
+
+.info-name {
+	padding-right: 150px;
+}
+.info-item__label {
+	margin-left: 80px;
+}
+
+.print-content {
+	margin-top: 40px;
+}
+
+.table-care {
+	color: var(--color-black);
+}
+
+.table.table-care th:nth-child(1),
+.table.table-care th:nth-child(2) {
+	width: 8%;
+}
+.table.table-care th:nth-child(3),
+.table.table-care th:nth-child(4) {
+	width: 38%;
+}
+.table.table-care th:nth-child(5) {
+	width: 10%;
+}
+
+/* Keyframe */
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
